0.11.24
K3b now ejects the source DVD when reader and writer device are the same (no more 
accidently overwriting the rewritable source DVD)

0.11.23
Fixed session import.
Fixed seldom crash in the welcome widget.
	
0.11.22
Flac 1.1.2 compile fix.

0.11.21
Little fix in capabilities detection (only affects buggy firmwares)
Properly detect the Philips 2600
Made multisession selection in DVD project visible.
Fixed crash when importing session failed.
Fixed compilation with flac 1.1.2

0.11.20
Fixed handling of -xa and -xa1 options for dvd patched cdrecord versions in which case K3b
	had problems with the -dvd suffix in the version string.

0.11.19
Finally fixed mp3 file detection (I feared I was never going to find the problem)
Fixed bug which made the DataDvdJob delete an image even if none was created.
Fixed bug which made the iso image verification fail when writing in TAO mode.
Fixed crash when no DVD writer is present.
	
0.11.18
Fixed Cd-Text loading in audio projects.
Fixed data project character restrictions.
Little improvements to the device capabilities detection.
Once again improved writing speed detection. Hopefully this is the last time. ;)
Do not warn about cdrecord not running suid root on kernel 2.6.8 and above
K3bSetup now removes the suid root bit on kernel 2.6.8 an above systems.
K3bSetup now also sets the proper permissions on the generic devices.
Fixed handling of boot load segment 0 for "none-emulation" boo images

0.11.17
Fixed some DVD writing speed detection issues.
Always write pure Data CDs in TAO mode when using cdrecord since DAO fails on so many
	writers. There should not be any drawback.
Properly restrict the charset everywhere a file in a data project can be renamed.
	
0.11.16
Open the device read-only in case opening read/write failes.

0.11.15
Fixed writer detection issues with kernel >= 2.6.8 (this only means that K3b now openes the device
	read/write when issuing the MODE SELECT command. Nothing more. Tests with kernel 2.6.9-rc2