@@ -218,16 +218,16 @@ AC_ARG_WITH(
 	[ac_cv_use_resmgr=yes]
 )
 
+RESMGR_LIB=""
 if test "$ac_cv_use_regmgr" != "no"; then
-  RESMGR_LIB=""
   KDE_CHECK_HEADERS(resmgr.h, [
          KDE_CHECK_LIB(resmgr,rsm_open_device,[
                  RESMGR_LIB="-lresmgr"
                  AC_DEFINE(HAVE_RESMGR,1,[defined if you have resmgr libraries and headers])
          ])
   ])
-  AC_SUBST(RESMGR_LIB)
 fi
+AC_SUBST(RESMGR_LIB)
 dnl === check for resmgr - end ============
 
 AC_ARG_WITH(
